Atualiza os links de botões para index.html

--- a/agendamento.html
+++ b/agendamento.html
@@ -14,7 +14,7 @@
   </header>
 
   <nav>
-    <button onclick="window.location.href='cadastro-paciente.html'">Paciente</button>
+    <button onclick="window.location.href='index.html'">Paciente</button>
     <button onclick="window.location.href='cadastro-medico.html'">Médico</button>
     <button onclick="window.location.href='agendamento.html'">Agendamento</button>
   </nav>
