--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 
   <nav>
-    <button onclick="window.location.href='cadastro-paciente.html'">Paciente</button>
+    <button onclick="window.location.href='index.html'">Paciente</button>
     <button onclick="window.location.href='cadastro-medico.html'">Médico</button>
     <button onclick="window.location.href='agendamento.html'">Agendamento</button>
   </nav>
