--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Cadastro de Paciente</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-  <script src="js/paciente.js" defer></script>
+  <script src="./JS/paciente.js" defer></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <button onclick="alternarTema()" style="float: right; margin: 10px;">🌓 Tema</button>
 
