--- a/cadastro-medico.html
+++ b/cadastro-medico.html
@@ -5,7 +5,7 @@
   <title>Cadastro de Médico</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-  <script src="./js/medico.js" defer></script>
+  
 </head>
 <body>
   <header>
@@ -123,6 +123,6 @@
     }
   };
 </script>
-
+<script src="./js/medico.js"></script>
 </body>
 </html>
